# zoom_videosdk_linux_rawdatademos

./: .env.example  .gitignore  CMakeLists.txt  README for Visual Studio 2022.md  README.md  config.json  readme for docker.md
AllInOneExample/Dockerfile-Ubuntu/: Dockerfile
AllInOneExample/src/: CMakeLists.txt  WebService.cpp  WebService.h  ZoomVideoSDKRawDataPipeDelegate.h  zoom_v-sdk_linux_bot.cpp
CalloutExample/Dockerfile-Ubuntu/: Dockerfile
CalloutExample/src/: CMakeLists.txt  zoom_v-sdk_linux_bot.cpp
ChatExample/Dockerfile-Ubuntu/: Dockerfile
ChatExample/src/: CMakeLists.txt  zoom_v-sdk_linux_bot.cpp
CloudRecordingExample/Dockerfile-Ubuntu/: Dockerfile
CloudRecordingExample/src/: CMakeLists.txt  zoom_v-sdk_linux_bot.cpp
CommandChannelExample/Dockerfile-Ubuntu/: Dockerfile
CommandChannelExample/src/: CMakeLists.txt  zoom_v-sdk_linux_bot.cpp
Dockerfile-Ubuntu/: Dockerfile
GetRawVideoAndAudioAPICallExample/Dockerfile-Ubuntu/: Dockerfile
GetRawVideoAndAudioAPICallExample/src/: CMakeLists.txt  DeepgramClient.h  WebService.cpp  ZoomVideoSDKRawDataPipeDelegate.cpp  ZoomVideoSDKRawDataPipeDelegate.h  ZoomVideoSDKVirtualAudioSpeaker.cpp  config.json.example  zoom_v-sdk_linux_bot.cpp
GetRawVideoAndAudioExample/Dockerfile-Ubuntu/: Dockerfile
GetRawVideoAndAudioExample/src/: CMakeLists.txt  zoom_v-sdk_linux_bot.cpp
LanguageTranscriptionAndTranslationExample/Dockerfile-Ubuntu/: Dockerfile
LanguageTranscriptionAndTranslationExample/src/: CMakeLists.txt  zoom_v-sdk_linux_bot.cpp
LiveStreamingExample/Dockerfile-Ubuntu/: Dockerfile
LiveStreamingExample/src/: CMakeLists.txt  zoom_v-sdk_linux_bot.cpp
SendRawVideoAndAudioExample/Dockerfile-Ubuntu/: Dockerfile
SendRawVideoAndAudioExample/src/: CMakeLists.txt  ZoomVideoSDKVideoSource.cpp  ZoomVideoSDKVideoSource.h  zoom_v-sdk_linux_bot.cpp  zoomus.conf.backup
SkeletonExample/: README.md
SkeletonExample/Dockerfile-Ubuntu/: Dockerfile
SkeletonExample/src/: CMakeLists.txt  PreviewVideoHandler.cpp  PreviewVideoHandler.h  RemoteVideoRawDataHandler.cpp  RemoteVideoRawDataHandler.h  VideoDisplayBridge.cpp  VideoDisplayBridge.h  VideoRenderer.cpp  VideoRenderer.h  ZoomVideoRenderer.cpp  ZoomVideoRenderer.h  ZoomVideoSDKRawDataPipeDelegate.cpp  config.json  zoom_v-sdk_linux_bot.cpp
StatisticsExample/Dockerfile-Ubuntu/: Dockerfile
StatisticsExample/src/: CMakeLists.txt  zoom_v-sdk_linux_bot.cpp
cmake/: ZoomVideoSDK.cmake
common/: DotEnv.h
include/zoom_video_sdk/: zoom_video_sdk_def.h  zoom_video_sdk_delegate_interface.h  zoom_video_sdk_interface.h  zoom_video_sdk_session_info_interface.h
include/zoom_video_sdk/helpers/: zoom_video_sdk_audio_send_rawdata_interface.h  zoom_video_sdk_chat_helper_interface.h  zoom_video_sdk_crc_helper_interface.h  zoom_video_sdk_share_helper_interface.h  zoom_video_sdk_user_helper_interface.h  zoom_video_sdk_video_helper_interface.h  zoom_video_sdk_video_setting_interface.h  zoom_video_sdk_video_source_helper_interface.h
src/: VirtualAudioSpeaker.cpp  VirtualAudioSpeaker.h  VirtualShareSource.cpp  VirtualShareSource.h  ZoomVideoSDKRawDataPipeDelegate.cpp  ZoomVideoSDKRawDataPipeDelegate.h  ZoomVideoSDKShareSource.cpp  ZoomVideoSDKVideoSource.cpp  ZoomVideoSDKVideoSource.h  ZoomVideoSDKVirtualAudioMic.cpp  ZoomVideoSDKVirtualAudioMic.h  ZoomVideoSDKVirtualAudioSpeaker.cpp  ZoomVideoSDKVirtualAudioSpeaker.h  raw_data_ffmpeg_encoder.cpp  zoom_v-sdk_linux_bot.cpp
