cmake_minimum_required(VERSION 3.14)


# Set the project name
project(MasterProject)

# Add subdirectories for each project
add_subdirectory(AllInOneExample/src)
add_subdirectory(CalloutExample/src)
add_subdirectory(ChatExample/src)
add_subdirectory(CloudRecordingExample/src)
add_subdirectory(CommandChannelExample/src)
add_subdirectory(GetRawVideoAndAudioExample/src)
add_subdirectory(GetRawVideoAndAudioAPICallExample/src)
add_subdirectory(LanguageTranscriptionAndTranslationExample/src)
add_subdirectory(LiveStreamingExample/src)
add_subdirectory(SendRawVideoAndAudioExample/src)
add_subdirectory(StatisticsExample/src)
add_subdirectory(SkeletonExample/src)